# constructor-bot

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
constructor_bot/: access.py  main.py  settings.py
constructor_bot/designer/: __init__.py  designer.py
constructor_bot/optimizator/: __init__.py  optimizator.py
constructor_bot/templates/: templates.py
