[tool.poetry]
name = "constructor-bot"
version = "0.1.0"
description = "Constructor bot for civsoc"
authors = ["mihalin <stopa3.10.1996@mail.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiogram = "^2.9.2"
python-dotenv = "^0.14.0"
Pillow = "^7.2.0"
aiohttp = "^3.6.2"
numpy = "^1.19.1"
scipy = "^1.5.1"

[tool.poetry.dev-dependencies]
isort = "^5.1.4"


[tool.poetry.scripts]
bot = "constructor_bot:main"
designer = "constructor_bot.designer:designer_test"
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

